--- a/testing_nbs.ipynb
+++ b/testing_nbs.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u4a6w1GsajIN",
-        "outputId": "015051e9-bef2-4659-ba5d-04d8d445e467"
+        "outputId": "84c726b4-b10b-459b-c59b-778aad3373db"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "7KGh6L6qVZ8b"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "4TkaTAC3zgr7"
       },
@@ -160,8 +160,8 @@
         "          for i in range(2,h):\n",
         "              col = np.vstack((col,decoded_imgs[i]))\n",
         "\n",
-        "          #y = np.where(col > 0.5,1,0) #round the values\n",
-        "          y = col\n",
+        "          y = np.where(col > 0.5,1,0) #round the values\n",
+        "          #y = col\n",
         "          y = (y * 255).astype('uint8')\n",
         "          if portion == 0:\n",
         "              final = y\n",
@@ -177,9 +177,9 @@
         "  #MASKING EACH RGB ------------------------------------------------\n",
         "  print('Model = ', model, '', str('RGB'))\n",
         "  rgbArray = np.zeros((h_dirty,w_dirty,3), 'uint8')\n",
-        "  rgbArray[..., 0] = 1-np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[0]) +  '.png').convert('L'))\n",
-        "  rgbArray[..., 1] = 1-np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[1]) +  '.png').convert('L'))\n",
-        "  rgbArray[..., 2] = 1-np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[2]) +  '.png').convert('L'))\n",
+        "  rgbArray[..., 0] = np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[0]) +  '.png').convert('L'))\n",
+        "  rgbArray[..., 1] = np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[1]) +  '.png').convert('L'))\n",
+        "  rgbArray[..., 2] = np.asarray(Image.open(file_path + \"5 Tested/output v\" + str(model)  + '_'+str(channel[2]) +  '.png').convert('L'))\n",
         "\n",
         "  final_RGB = Image.fromarray(rgbArray)\n",
         "  final_RGB.save(file_path + \"5 Tested/output v\" + str(model) + '_RGB_colored.png')"
@@ -189,22 +189,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lVaBudLqydfr",
-        "outputId": "e57786c0-8d35-4dcc-d2e1-9223ecd75a92"
+        "outputId": "f642a3ae-d1f7-427a-f522-8fd0fc426e67"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model =  1  red\n",
-            "Model =  1  green\n",
-            "Model =  1  blue\n",
-            "Model =  1  RGB\n",
-            "Model =  2  red\n",
-            "Model =  2  green\n",
-            "Model =  2  blue\n",
-            "Model =  2  RGB\n",
             "Model =  3  red\n",
             "Model =  3  green\n",
             "Model =  3  blue\n",
@@ -212,15 +204,7 @@
             "Model =  4  red\n",
             "Model =  4  green\n",
             "Model =  4  blue\n",
-            "Model =  4  RGB\n",
-            "Model =  5  red\n",
-            "Model =  5  green\n",
-            "Model =  5  blue\n",
-            "Model =  5  RGB\n",
-            "Model =  6  red\n",
-            "Model =  6  green\n",
-            "Model =  6  blue\n",
-            "Model =  6  RGB\n"
+            "Model =  4  RGB\n"
           ]
         }
       ]
